# makereadme

./: Cargo.toml
src/: conf.rs  fileop.rs  llmop.rs  main.rs
