[package]
name = "makereadme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
